# gleon

./: .coderabbit.yaml  .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile.toml  README.md  codebook.toml  deny.toml
.github/: CODEOWNERS  README.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yaml  spellcheck.yaml
.zed/: tasks.json
gleon/: Cargo.toml
gleon-core/: Cargo.toml
gleon-core/src/: cli.rs  config.rs  context.rs  git.rs  io.rs  lib.rs  manifest.rs  masking.rs  platform.rs  report.rs  scanner.rs
gleon-core/src/engine/: mod.rs  phash.rs  pixel.rs  ssim.rs
gleon-core/src/ops/: diff.rs  init.rs  mod.rs  stage.rs  status.rs
gleon-core/src/storage/: adapter.rs  merge.rs  mod.rs  sync.rs
gleon-core/src/templates/: junit.xml  report.html
gleon-core/tests/: comparison_integration.rs  diff_integration.rs  git_integration.rs  init_integration.rs  masking_integration_test.rs  merge_integration_test.rs  r2_smoke_test.rs  report_integration.rs  scanner_integration.rs  stage_integration.rs  status_integration.rs  storage_integration.rs  storage_unit_test.rs  sync_integration_test.rs
gleon-core/tests/fixtures/: default_config.yaml  default_manifest.json  default_manifest_index.json  gleon.yaml  gleon_unknown_fields.yaml
gleon-core/tests/fixtures/report_output/: junit.xml  report.html  report.md
gleon/src/: main.rs
gleon/tests/: cli_tests.rs
gleon/tests/fixtures/git/: .gitignore
gleon/tests/fixtures/platform/: linux-chrome.yaml  macos-opaque.yaml  minimal.yaml
