[workspace]
resolver = "2"
members = [
    "gleon-core",
    "gleon"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["tsinis"]
license = "BUSL-1.1"

[workspace.dependencies]
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
clap = { version = "4.6.1", features = ["derive"] }
assert_cmd = "2.2.2"
predicates = "3.1.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
serde_json = "1.0.150"
semver = { version = "1.0.28", features = ["serde"] }
thiserror = "2.0.18"
tempfile = "3.27.0"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
panic = "deny"
