[workspace]
resolver = "2"
members = [
    "gleon-core",
    "gleon"
]

[workspace.package]
authors = ["tsinis"]
edition = "2024"
license = "BUSL-1.1"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.103"
assert_cmd = "2.2.2"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
gix = { version = "0.85.0", default-features = false, features = ["sha1", "revision"] }
globset = "0.4.19"
hex = "0.4.3"
image = "0.25.10"
ignore = "0.4.30"
predicates = "3.1.4"
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"


[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
expect_used = "deny"
nursery = { level = "deny", priority = -1 }
panic = "deny"
pedantic = { level = "deny", priority = -1 }
todo = "deny"
unwrap_used = "deny"
