[workspace]
resolver = "2"
members = [
    "gleon-core",
    "gleon"
]

[workspace.package]
authors = ["tsinis"]
edition = "2024"
license = "BUSL-1.1"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.103"
assert_cmd = "2.2.2"

bytemuck = "1.25.2"
bytes = "1.12.1"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.4", features = ["derive", "env"] }
futures = "0.3.33"
gix = { version = "0.85.0", default-features = false, features = ["sha1", "revision"] }
globset = "0.4.19"
hex = "0.4.3"
ignore = "0.4.31"
image = { version = "0.25.5", default-features = false, features = ["png"] }
indicatif = "0.18.6"
image-compare = "0.5.0"
image_hasher = "3.1.1"
minijinja = "2.21.0"
object_store = { version = "0.14.1", features = ["aws"] }
predicates = "3.1.4"
rayon = "1.12.0"
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.151"
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.53.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"


[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
expect_used = "deny"
nursery = { level = "deny", priority = -1 }
panic = "deny"
pedantic = { level = "deny", priority = -1 }
todo = "deny"
unwrap_used = "deny"
