[package]
name = "gleon-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
globset = { workspace = true }
gix = { workspace = true }
rayon = { workspace = true }
image = { workspace = true }
image-compare = { workspace = true }
image_hasher = { workspace = true }
ignore = { workspace = true }
sha2 = { workspace = true }


[package.metadata.cargo-udeps.ignore]
normal = ["tracing"]
