[package]
name = "gleon-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bytemuck = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
gix = { workspace = true }
globset = { workspace = true }
hex = { workspace = true }
ignore = { workspace = true }
image = { workspace = true }
image-compare = { workspace = true }
image_hasher = { workspace = true }
minijinja = { workspace = true }
object_store = { workspace = true }
rayon = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }



[package.metadata.cargo-udeps.ignore]
normal = ["tracing"]
