[package]
name = "gleon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
gleon-core = { path = "../gleon-core" }
indicatif = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }

[package.metadata.cargo-udeps.ignore]
normal = ["gleon-core"]
